--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,5 +36,18 @@ services:
     ports:
       - "6379:6379"
 
+
+# 4. DB Admin UI
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: career_partner_admin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+
 volumes:
   postgres_data:
