Feat: Add CV Agent and Semantic Matcher

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     depends_on:
       - db
       - redis
+    env_file:
+      - .env
 
   # 2. The Database (With Vector Support)
   db:
