--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,18 @@ services:
     ports:
       - "6379:6379"
 
+  # 4. Neo4j (Graph Database)
+  neo4j:
+    image: neo4j:5
+    container_name: career_neo4j
+    ports:
+      - "7474:7474" # HTTP
+      - "7687:7687" # Bolt
+    environment:
+      - NEO4J_AUTH=neo4j/password123
+    volumes:
+      - neo4j_data:/data
+
 
 # 4. DB Admin UI
   pgadmin:
@@ -53,3 +65,4 @@ services:
 
 volumes:
   postgres_data:
+  neo4j_data:
