--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ version: '3.8'
 services:
   # 1. Your FastAPI Application
   backend:
-    build: .
+    build: ./backend
     container_name: career_backend
     ports:
       - "8000:8000"  # You can access API at localhost:8000
     volumes:
-      - .:/app       # SYNC: Changes on your PC -> update Container immediately
+      - ./backend:/app       # SYNC: Changes on your PC -> update Container immediately
     environment:
       - DATABASE_URL=postgresql+asyncpg://admin:password123@db:5432/career_db
       - REDIS_URL=redis://redis:6379/0
@@ -16,7 +16,7 @@ services:
       - db
       - redis
     env_file:
-      - .env
+      - ./backend/.env
 
   # 2. The Database (With Vector Support)
   db:
