feat: Implement the core AI career partner including agent pipeline and interview agent using live audio

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,3 +23,4 @@ neo4j                 # Graph Database driver
 duckduckgo-search     # Web Search tool
 beautifulsoup4        # HTML parsing (used by market trends scraper)
 httpx                 # Async HTTP client
+aiohttp               # Async HTTP client for specific agents
